tests/neg-custom-args/captures/assumesafe-emptypkg.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/assumesafe-emptypkg.scala:8:27 -------------------------
8 |  def println(s: String) = Console.println(s) // error
  |                           ^^^^^^^
  |                           Reference `Console` is not included in the allowed capture set {}
  |                           of the enclosing object A.
  |
  |                           External uses should be declared explicitly with a uses clause in object A:
  |
  |                               uses Console
